Fixe overflow

--- a/style.css
+++ b/style.css
@@ -30,5 +30,5 @@ body {
 .chart {
   width: 100%;
   height: 100%;
-  overflow: none;
+  overflow: hidden;
 }
